@@ -13,6 +13,7 @@ inc/Module/Install/WriteAll.pm
 lib/HTML/Feature.pm
 lib/HTML/Feature/Engine.pm
 lib/HTML/Feature/Engine/TagStructure.pm
+lib/HTML/Feature/Result.pm
 Makefile.PL
 MANIFEST			This list of files
 META.yml
@@ -25,7 +26,6 @@ t/03_run/data/test.html
 t/03_run/data/utf8.html
 t/03_run/element.t
 t/03_run/oo.t
-t/03_run/out
 t/03_run/simple.t
 t/99_kwalitee.t
 t/99_pod-coverage.t
