@@ -1,24 +1,0 @@
-
-車にまつわる話、あります、あります 
-ムッとする話が 
-おば１が妊娠中のこと 
-お里帰りしてくる少し前にばあばが車で事故を起こしました 
-大きな事故ではなく、怪我も入院するようなことはなく、ひと安心 
-パパリン家の人々は、<おば１には言わないように>とmamatanの顔を見るたび口々に言いました 
-言わないっての 妊婦になんて 言うわけないでしょうよ 
-そして、全２〜３カ月にも及ぶ嵐のお里帰りを終え、生まれた娘も無事七五三を迎え、おば１は未だ事故のことは知らないと思います 
-さて、話は変わり、mamatanが王子を妊娠中 
-お里帰りするため、姫様の幼稚園を休ませることがバレると舅の怒りを買うらしく 
-もう幼稚園はお休みに入ったということで、妊娠中に細かいことにさんざん気をつかったあげく、やっとの思いで、実家に帰り、のんびりするのもつかの間 
-検診のため、病院に行ったその日のうちに、おば２がmamatanの愛車で交通事故を起こし、廃車に 
-もう、車の運転はしていなかったので、バス停でバスを待っていたら電話がかかってきました 
-よりによって、パパリンからです 
-<びっくりしないで聞いて、落ち着いてよ〜、おば１（さすがにパパリンは名前で呼んでます）が、うちの車で事故って廃車だから、じゃあね〜> 
-だって 
-おまえはアホか そんな話、落ち着いて聞けるかっつ〜の バス停で生まれちゃうかと思ったよ 姫様とお母さんがいっしょでよかったよ 
-自分の子供が無事に生まれなくてもいいわけ 
-ばあばの事故のときは、まっ先にmamatanに電話をかけてきて<あいつには言わないように頼むね〜>なんて言ってきたくせに 
-どういうことかしら 
-生まれちゃいましたよ、その日の夜に陣痛がきて…１０日も早かったわよ 
-王子が無事に生まれてよかった〜 
-ああ、思い出したら腹が立ってきたっ
